prod/blue/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: school-prod-blue
  labels:
    domain: school
    environment: prod
    color: blue
    owner: devops
